homer/homer/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer
  namespace: homer
  labels:
    app: homer
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
    cert-manager.io/cluster-issuer: le-example-http
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "homer.riles.xyz"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: homer
              port:
                number: 8080
  tls:
  - hosts:
    - homer.riles.xyz
    secretName: tls-homer-https
